# CMakeList.txt : CMake project for CPPAOC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CPPAOC "CPPAOC.cpp" "CPPAOC.h" "Day01.cpp" "Day01.h" "Day20.cpp" "Day20.h")

# TODO: Add tests and install targets if needed.
